@@ -1,5 +1,8 @@
 2019-02-10  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* includes/x/w/input_field: add select_all() to the input field filter
+	callbacks.
+
 	* gridlayoutmanager_impl.C: Fix replace_cell() bug.
 
 0.17
